Fixed the text alignment when responsive.
Had accidentally deleted a line but fixed it.

--- a/builds/development/css/main.css
+++ b/builds/development/css/main.css
@@ -12020,6 +12020,12 @@ body {
   text-align: center;
 }
 
+@media (min-width: 992px) {
+  #pricedescript {
+    text-align: right;
+  }
+}
+
 #pricedescript label {
   margin: 0 20px 20px 0;
 }
@@ -12042,17 +12048,13 @@ body {
 #quotewidth {
   padding-left: 80px;
   padding-right: 80px;
+  text-align: center;
+  padding-bottom: 25px;
 }
 
-@media (max-width: 992px) {
+@media (min-width: 992px) {
   #quotewidth {
-    text-align: center;
-  }
-}
-
-@media (max-width: 768px) {
-  #quotewidth {
-    text-align: center;
+    text-align: right;
   }
 }
 
